syntax = "proto3";

package pb;

import "enums.proto";

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.

message LeadersSettings {
  repeated LeaderSettings leader_settings = 1;
}

message LeaderSettings {
  string name = 1;
  int32 birth_year = 2;
  int32 start_year = 3;
  int32 end_year = 4;
  Culture culture = 5;
  repeated ProvinceId provinces = 6;
  bool elected = 8;
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message LeadersState {
  repeated LeaderState active = 1;
  repeated LeaderState dead = 2;
  repeated LeaderState inactive = 3;
}

message LeaderState {
  string name = 1;
  ProvinceId province = 2; // Only if currently leading; NONE for dissidents
}